# niki-multigame

./: .gitignore  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/bepis_game/: BepisClickerGame.cpp  BepisClickerGame.hpp
src/mainmenu/: MainMenu.cpp  MainMenu.hpp
src/tictactoe_game/: TicTacToeGame.cpp  TicTacToeGame.hpp  TicTacToeGameMap.hpp
src/util/: Defines.hpp
src/util/element/: ElementUtil.cpp  ElementUtil.hpp
src/util/resources/: Resources.cpp  Resources.hpp
src/util/resources/fonts/: FontStorage.cpp  FontStorage.hpp
